DEV - fix overflow issue

--- a/inc/scss/_global.scss
+++ b/inc/scss/_global.scss
@@ -2,6 +2,7 @@
 html {
     font-size: 18px;
     overflow-y: scroll;
+    overflow-x: hidden;    
     
     &.no-scroll {
 	    overflow-y: hidden;
@@ -70,6 +71,7 @@ h3, .h3 {
 
 main {
     min-height: 100vh;
+    overflow: hidden;
 }
 
 p {
